_css/_layout.scss
/* ... */
.product-body h2 {
  @include breakpoint(medium down) {
    padding-top: 20px;
    .slideshow-without-thumbnails {
      margin-bottom: 20px;
    }
  }
}

.slider-main {
  margin-bottom: 30px;
  position: relative;
  &.show-for-medium .orbit-container {
    height: 475px !important;
  }
  &.show-for-small-only .orbit-container {
    height: 300px !important;
  }
  .orbit-container li > div {
    background-position: center center;
    @include breakpoint(medium) {
      height: 475px;
    }
    @include breakpoint(small only) {
      height: 300px;
    }
    @include breakpoint(medium down) {
      box-shadow: inset 0 10px 20px 0 #333;
    }
  }
  .orbit-slide > div {
    @include breakpoint(xxlarge) {
      background-size: 100%;
    }
  }
  .orbit-bullets {
    margin: 0;
    position: absolute;
    z-index: 200;
    text-align: right;
    right: 70px;
    top: 5px;
    button, button:visited {
      background: url(/assets/images/theme/pagination-non-active.png) no-repeat scroll left top transparent;
      cursor: pointer;
      display: block;
      height: 15px;
      width: 15px;
      margin: 6px 0 0 5px;
      font-size: 0px;
      display: inline-block;
      &.is-active {
        background: url(/assets/images/theme/pagination-active.png) no-repeat scroll left top transparent;
      }
    }
    @include breakpoint(small only) {
      right: 10px;
    }
  }
}

.social-share-container {
  margin-bottom: 30px;
  a {
    background-image: url('/assets/images/theme/social-icons.png');
    background-repeat: no-repeat;
    display: inline-block;
    text-indent: -999em;
    height: 42px;
    margin-right: 8px;
    width: 42px;
    &.social-share-facebook {
      background-position: -51px 0;
      &:hover {
        background-position: -51px -43px;
      }
    }
    &.social-share-twitter {
      background-position: -101px 0;
      &:hover {
        background-position: -101px -43px;
      }
    }
  }
  #zeroclipboard-dynamic-id-0-zeroclipboard-wrapper div {
    background-image: url('/assets/images/theme/social-icons.png');
    background-repeat: no-repeat;
    background-position: -151px 0;
    cursor: pointer;
    &:hover {
      background-position: -151px -43px;
    }
  }
  a.social-share-pinterest {
    background-position: 0 0;
    &:hover {
      background-position: 0 -43px;
    }
  }
}

.product-category {
  h2 {
    float: left;
    line-height: 29px;
    margin-bottom: 0;
    @include breakpoint(small only) {
      float: right;
    }
  }
  h3 {
    color: $white;
    font-family: Josefin Slab;
    line-height: 54px;
    font-size: 65px;
    font-style: normal;
    text-transform: uppercase;
  }
  .quick-view-image {
    @include breakpoint(small only) {
      display: block;
      margin: 0 auto;
    }
  }
  .column-packaging {
    @include breakpoint(small only) {
      display: none;
    }
  }
  .orbit-bullets {
    background: none;
    border: none;
    float: right;
    height: auto;
    margin: 0;
    text-transform: lowercase;
    @include breakpoint(medium down) {
      clear: right;
    }
    button {
      background: url('/assets/images/theme/bg-quicktabs.png') no-repeat;
      border-radius: 0;
      color: #737373;
      display: block;
      float: left;
      font-size: 14px;
      height: 29px;
      line-height: 20px;
      margin: 0 2px;
      padding: 5px 0 0 0;
      text-align: center;
      width: 110px;
      &:last-child {
        margin-right: 0;
      }
      &.is-active {
        background-position: 0 -34px;
      }
    }
  }
  .orbit-container {
    border: none;
    clear: both;
    position: relative;
    .left {
      bottom: 40px;
      left: 20px;
      position: absolute;
    }
    .right {
      bottom: 40px;
      right: 20px;
      position: absolute;
    }
  }
  .orbit-slide {
    background: url('/assets/images/theme/bg-qtproducts-shadow.png') no-repeat center bottom;
    margin-bottom: 30px;
    padding-bottom: 20px;
    > .row:first-child {
      background: url('/assets/images/theme/bg-qtproducts.jpg') repeat;
      clear: both;
      min-height: 380px;
      padding: 20px;
      position: relative;
    }
  }
  .absolute-bottom-right {
    bottom: 20px;
    position: absolute;
    right: 20px;
  }
}

.products-sidebar {
  padding-top: 1rem;
}
/* ... */

